<resources>
    <string name="app_name">ProfileApp</string>
    <string name="username">Usuario</string>
    <string name="name">Nombre</string>
    <string name="score">Score 30.451</string>
    <string name="follow_button">Follow</string>
    <string name="followers_quantity">330K</string>
    <string name="followers_editText">Followers</string>
    <string name="collections_quantity">17</string>
    <string name="collections_editText">Collections</string>
    <string name="scoreboard_quantity">219</string>
    <string name="scoreboard_editText">Scoreboard</string>
    <string name="profile_tab">Profile</string>
    <string name="information_tab">Information</string>
    <string name="contact_tab">Contact</string>
    <string name="button_edit_image">Edit Image</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="username_text_view">Username</string>
</resources>