<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/app_bar"
                    android:background="#0A5BE4"
                    style="@style/Widget.CoolStuff.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:navigationIcon="@drawable/arrow_left">

                    <TextView
                        android:id="@+id/username_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"/>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="@string/username"
                android:textAlignment="center"
                android:background="#0A5BE4"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#0A5BE4"
                android:textColor="@color/white"
                android:text="@string/score"
                android:textAlignment="center"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/follow_button"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/followers_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:background="@drawable/back"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/collections_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:background="@drawable/back"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/scoreboard_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:background="@drawable/back"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0A5BE4"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_input"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/username_text_view"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name_text_input"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/black"
                    android:layout_gravity="center"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:hint="@string/full_name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_text_input"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/age"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_text_input"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/black"
                    android:hint="@string/location"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="90dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/button_save"
                        android:textColor="@color/black"
                        app:cornerRadius="10dp"
                        app:strokeColor="@color/black"
                        app:strokeWidth="3dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit_image"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_toEndOf="@+id/btn_save"
                        android:backgroundTint="@color/white"
                        android:text="@string/button_edit_image"
                        android:textColor="@color/black"
                        app:cornerRadius="10dp"
                        app:strokeColor="@color/black"
                        app:strokeWidth="3dp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>